test_suite/alan-2022-examples/failing/002240_mutation.alan
source O begin get t[51 relax] end
